fix: Fix layout on mobile screen

--- a/home.css
+++ b/home.css
@@ -603,6 +603,7 @@
 .home-team {
   gap: var(--dl-space-space-fiveunits);
   width: 100%;
+  height: 1533px;
   display: flex;
   max-width: 1440px;
   align-items: flex-start;
@@ -651,8 +652,8 @@
   height: 510px;
   display: grid;
   align-items: flex-start;
-  flex-direction: column;
-  grid-template-columns: repeat(4, 1fr);
+  flex-direction: row;
+  grid-template-columns: repeat(2, 1fr);
 }
 .home-card3 {
   width: 100%;
@@ -710,7 +711,7 @@
   padding-right: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
   justify-content: center;
-  background-color: #FFCF77;
+  background-color: #9DDADB;
 }
 .home-image09 {
   object-fit: cover;
@@ -750,7 +751,7 @@
   padding-right: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
   justify-content: center;
-  background-color: #8FA7DF;
+  background-color: #FFCF77;
 }
 .home-image11 {
   object-fit: cover;
@@ -790,7 +791,7 @@
   padding-right: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
   justify-content: center;
-  background-color: #9DDADB;
+  background-color: #8FA7DF;
 }
 .home-image13 {
   object-fit: cover;
@@ -815,11 +816,11 @@
   text-transform: lowercase;
 }
 .home-features {
-  gap: 120px;
+  gap: var(--dl-space-space-fiveunits);
   width: 100%;
   display: flex;
   max-width: 1440px;
-  align-items: center;
+  align-items: flex-start;
   padding-left: var(--dl-space-space-fiveunits);
   padding-right: var(--dl-space-space-fiveunits);
   flex-direction: column;
@@ -889,7 +890,7 @@
   width: 100%;
   display: flex;
   max-width: 1440px;
-  align-items: center;
+  align-items: flex-start;
   padding-left: var(--dl-space-space-fiveunits);
   padding-right: var(--dl-space-space-fiveunits);
   flex-direction: column;
@@ -1683,6 +1684,27 @@
     font-size: 30px;
     line-height: 60px;
   }
+  .home-description04 {
+    width: 336px;
+  }
+  .home-image04 {
+    width: 508px;
+    height: 406px;
+  }
+  .home-team {
+    width: 100%;
+    height: 1581px;
+    margin-bottom: 104px;
+  }
+  .home-main4 {
+    height: 1327px;
+  }
+  .home-header10 {
+    width: 929px;
+  }
+  .home-header13 {
+    width: 1012px;
+  }
   .home-header25 {
     font-size: 90px;
     font-style: normal;
@@ -1741,6 +1763,9 @@
   .home-row2 {
     flex-direction: column;
   }
+  .home-team {
+    height: 1580px;
+  }
   .home-main4 {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -1775,8 +1800,11 @@
     gap: var(--dl-space-space-unit);
   }
   .home-header {
+    color: rgb(255, 255, 255);
     font-size: 36px;
     max-width: 70%;
+    font-style: normal;
+    font-weight: 500;
     line-height: 43px;
   }
   .home-caption {
@@ -1789,6 +1817,7 @@
   }
   .home-description01 {
     gap: var(--dl-space-space-threeunits);
+    height: 592px;
     padding-left: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-oneandhalfunits);
   }
@@ -1796,7 +1825,7 @@
     gap: var(--dl-space-space-unit);
   }
   .home-paragraph {
-    font-size: 20px;
+    color: rgb(255, 255, 255);
     line-height: 30px;
   }
   .home-paragraph1 {
@@ -1804,6 +1833,7 @@
     line-height: 30px;
   }
   .home-pricing {
+    height: 2537px;
     padding-top: var(--dl-space-space-threeunits);
     padding-left: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-oneandhalfunits);
@@ -1820,7 +1850,10 @@
     gap: var(--dl-space-space-oneandhalfunits);
   }
   .home-header01 {
+    color: rgb(255, 255, 255);
     font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
   }
   .home-description02 {
     font-size: 14px;
@@ -1875,7 +1908,9 @@
   }
   .home-team {
     gap: var(--dl-space-space-fourunits);
+    height: 1523px;
     padding-left: var(--dl-space-space-oneandhalfunits);
+    margin-bottom: 0px;
     padding-right: var(--dl-space-space-oneandhalfunits);
   }
   .home-content05 {
@@ -1910,6 +1945,7 @@
   }
   .home-features {
     gap: var(--dl-space-space-threeunits);
+    height: 1381px;
     padding-left: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-oneandhalfunits);
     padding-bottom: var(--dl-space-space-sixunits);
@@ -1935,6 +1971,7 @@
     line-height: 21px;
   }
   .home-blog {
+    height: 2018px;
     padding-left: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-oneandhalfunits);
     padding-bottom: var(--dl-space-space-fourunits);
@@ -2028,6 +2065,7 @@
     line-height: 21px;
   }
   .home-join-us {
+    height: 626px;
     padding-left: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-oneandhalfunits);
     padding-bottom: var(--dl-space-space-fourunits);
@@ -2172,8 +2210,29 @@
   .home-mobile-menu {
     padding: 16px;
   }
+  .home-description01 {
+    height: 843px;
+  }
+  .home-pricing {
+    height: 2541px;
+  }
+  .home-team {
+    height: 2588px;
+    padding-bottom: var(--dl-space-space-unit);
+  }
   .home-main4 {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .home-features {
+    gap: var(--dl-space-space-fiveunits);
+    height: 1179px;
+    padding-bottom: var(--dl-space-space-unit);
+  }
+  .home-blog {
+    height: 2069px;
+  }
+  .home-join-us {
+    height: 629px;
   }
   .home-image20 {
     width: 200%;
